Fix scrollbar css

--- a/src/42/themes/default/html/scrollbar.css
+++ b/src/42/themes/default/html/scrollbar.css
@@ -5,7 +5,16 @@
   --scrollbar-track-bg: transparent;
 }
 
-* { scrollbar-color: var(--scrollbar-thumb-bg, currentColor) var(--scrollbar-track-bg); }
+/**
+ * Browsers supporting ::-webkit-scrollbar may mess with
+ * scrollbar styles if also using scrollbar-color
+ */
+
+@-moz-document url-prefix() {
+  :root {
+    scrollbar-color: var(--scrollbar-thumb-bg, currentColor) var(--scrollbar-track-bg);
+  }
+}
 
 ::-webkit-scrollbar {
   width: var(--scrollbar-track-size);
